k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spiritual-gifts
  labels:
    app.kubernetes.io/name: spiritual-gifts
