k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: spiritual-gifts
  labels:
    app: spiritual-gifts
spec:
  selector:
    app: spiritual-gifts
  ports:
    - name: http
      port: 80
      targetPort: 8000
